<resources>
    <string name="app_name">Rayd Rider</string>
    <string name="punch_line">Your punch line here</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_pass1">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="signup_for_new">Singup For New Account</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="submit">Submit</string>
    <string name="password_will_send_msg">Password will be send on your registered number</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="payments">Payments</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="recent_rides">Recent Rides</string>
    <string name="continue1">Continue</string>
    <string name="car_category">Car Category</string>
    <string name="licence_no">Licence Number</string>
    <string name="veh_number">Vehicle Number</string>
    <string name="vehical_setup">Vehicle Setup</string>
    <string name="ride_history">Ride History</string>
    <string name="bill_his">Bill History</string>
    <string name="settings">Settings</string>
    <string name="payout">Payout</string>
    <string name="update_dt_here">Update Details Here</string>
    <string name="user_settings">User Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="other">Other</string>
    <string name="faq">FAQ</string>
    <string name="about">About Us</string>
    <string name="change_password">Change Password</string>
    <string name="location">Location</string>
    <string name="wallet">Wallet</string>
    <string name="change">Change</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="re_new_pass">Re-Enter New Password</string>
    <string name="loading">Loading</string>
    <string name="ok">Ok</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="otp_here">Otp Here</string>
    <string name="my_rides">My Rides</string>
    <string name="email_add">Email Address</string>
    <string name="intr_msg">Please connect to Internet</string>
    <string name="edit_error_msg">Please Enter</string>
    <string name="pass_lngth_error">Password Should have Alteast 6 Char</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_mobile">Invalid Mobile</string>
    <string name="plase_ch">Please Choose</string>
    <string name="email_exist">Email Already Exist</string>
    <string name="mob_exist">Mobile Number Already Exist</string>
    <string name="signup_succ">Signup Successful</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="ch_car_category">Choose Car Type</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="same_pass_error">Please Enter Same New Passwords</string>
    <string name="invalid_old_password">Invalid Old Password</string>
    <string name="password_ch">Password Updated</string>
    <string name="firebase_storage_url">gs://rideshare-6f02f.appspot.com</string>
    <string name="upload_field">Upload Failed</string>
    <string name="select_cat">Select Category</string>
    <string name="price_est">Price Estimate</string>
    <string name="choose_cat">Choose Category</string>
    <string name="where_hint">Where are you going?</string>
    <string name="upcoming_rides">Upcoming Rides</string>
    <string name="language">Language</string>
    <string name="choose_driver">Choose Driver</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="messages">Messages</string>
    <string name="waiting">Waiting</string>
    <string name="trip_rejected">Trip Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="track">Track</string>
    <string name="noti_key">AAAAVoQ_-pI:APA91bG7rrFB7GWSH97ofCoaXbTehJKXLSi_zhmRwChOHHwE40jUxPF9bzD7VMcF1EQhv0dTkYAfz_1rQmkaIzR-33KBDXbuEs3K0P6pmDv7m5StDkOlRccCM_LORv_k6pWAWsU0vFEE</string>
    <string name="cancel">Cancel</string>
    <string name="ride_canceled_msg">Ride Canceled</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="one_time">One Time</string>
    <string name="future_ride">Future Ride</string>
    <string name="comfort_level">Comfort Level</string>
    <string name="start">Start</string>
    <string name="economy">Economy</string>
    <string name="comfort">Comfort</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="give_review">Give Review</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_here">Write feedback here...</string>
    <string name="th_for_feedback">Thanks for you valuable feedback</string>
    <string name="your_location">Your Location</string>
    <string name="destination">Destination</string>
    <string name="low_est_fair_msg">Sorry!! Your esitmate is very low</string>
    <string name="support_request">Request Support</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="login_msg">Please Enter Details</string>
    <string name="refer_to_frnd">Refer to a Friend</string>
    <string name="nice_to_meet_you">Nice to meet you</string>
    <string name="app_name1">Rayd</string>
    <string name="app_name2">Rider</string>
    <string name="req_for_width">Request Withdrawal</string>
    <string name="width_msg">Your withdraw will process in 3 working days</string>
    <string name="find_a_ride">Find a Ride</string>
    <string name="category">Category</string>
    <string name="no_driver_avail">Sorry!! No driver available now</string>
    <string name="join_ride">Join Ride</string>
    <string name="places_key">AIzaSyBxcJZpjs1OiOWcn7Glzv_so2bnaplaV28</string>
    <string name="fetching_loc">Wait device fetching your location.</string>
</resources>
