<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/rl_main"
    android:background="@color/white"
    android:padding="@dimen/margin1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:fontFamily="@font/font2"
        android:textSize="@dimen/txt_size_xlg"
        android:layout_marginTop="@dimen/margin1"
        android:includeFontPadding="false"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:text="@string/login_msg"
        android:layout_below="@id/txt1"
        android:fontFamily="@font/font1"
        android:layout_marginTop="@dimen/margin1"
        android:textColor="@color/dgry"
        android:lineSpacingExtra="@dimen/sizesm1"
        android:textSize="@dimen/txt_size_lg"
        android:layout_marginRight="@dimen/margin_xlg"
        android:includeFontPadding="false"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/txt2"
        android:layout_marginTop="@dimen/margin_xxlg"
        android:paddingLeft="@dimen/margin1"
        android:paddingRight="@dimen/margin"
        android:background="@drawable/round_ract0"
        android:layout_height="@dimen/size62">

        <EditText
            android:id="@+id/et1"
            android:singleLine="true"
            android:background="@null"
            android:fontFamily="@font/font1"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_lg"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/sizesm1"
            android:inputType="textEmailAddress"
            android:layout_centerVertical="true"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/txt2"
        android:layout_marginTop="@dimen/margin1"
        android:paddingLeft="@dimen/margin1"
        android:paddingRight="@dimen/margin"
        android:background="@drawable/round_ract0"
        android:layout_height="@dimen/size62">

        <EditText
            android:id="@+id/et2"
            android:singleLine="true"
            android:background="@null"
            android:fontFamily="@font/font1"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_lg"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/sizesm1"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin1"
        android:layout_marginRight="@dimen/margin"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/forgot_pass1"
                android:includeFontPadding="false"
                android:fontFamily="@font/font1"
                android:textColor="@color/dgry1"
                android:textSize="@dimen/txt_size_md1"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/t2"
                android:layout_toRightOf="@id/t1"
                android:layout_marginLeft="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/click_here"
                android:onClick="ForNow"
                android:includeFontPadding="false"
                android:fontFamily="@font/font2"
                android:textColor="@color/app_color"
                android:textSize="@dimen/txt_size_md1"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_lg"
        android:background="@drawable/bt_bg"
        android:fontFamily="@font/font2"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        android:textAllCaps="false"
        android:onClick="LoginNow"
        android:textSize="@dimen/txt_size_lg"
        android:text="@string/login"
        android:backgroundTint="@color/app_color"
        android:layout_height="@dimen/size62"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_xlg"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/t11"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/new_user"
                android:includeFontPadding="false"
                android:fontFamily="@font/font1"
                android:textColor="@color/dgry1"
                android:textSize="@dimen/txt_size_lg"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/t21"
                android:layout_toRightOf="@id/t11"
                android:onClick="RegNow"
                android:layout_marginLeft="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/signup_for_new"
                android:includeFontPadding="false"
                android:fontFamily="@font/font2"
                android:textColor="@color/app_color"
                android:textSize="@dimen/txt_size_lg"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
</RelativeLayout>