<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="@dimen/margin1"
    android:paddingRight="@dimen/margin1"
    android:paddingBottom="@dimen/margin1"
    android:paddingTop="@dimen/margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:src="@drawable/back_icon"
            android:tint="@color/white"
            android:scaleX=".8"
            android:scaleY=".8"
            android:onClick="NavNow"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:fontFamily="@font/font2"
            android:textSize="@dimen/txt_size_xlg"
            android:layout_marginTop="@dimen/margin_lg"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:text="@string/punch_line"
            android:layout_below="@id/txt1"
            android:fontFamily="@font/font1"
            android:layout_marginTop="@dimen/margin1"
            android:textColor="@color/dgry"
            android:lineSpacingExtra="@dimen/sizesm1"
            android:textSize="@dimen/txt_size_lg"
            android:layout_marginRight="@dimen/margin_xlg"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/txt2"
            android:layout_marginTop="@dimen/margin_xxlg"
            android:paddingLeft="@dimen/margin1"
            android:paddingRight="@dimen/margin"
            android:background="@drawable/round_ract0"
            android:layout_height="@dimen/size62">

            <EditText
                android:id="@+id/et1"
                android:singleLine="true"
                android:background="@null"
                android:fontFamily="@font/font1"
                android:textStyle="bold"
                android:textSize="@dimen/txt_size_lg"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/sizesm1"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:hint="@string/old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/txt2"
            android:layout_marginTop="@dimen/margin1"
            android:paddingLeft="@dimen/margin1"
            android:paddingRight="@dimen/margin"
            android:background="@drawable/round_ract0"
            android:layout_height="@dimen/size62">

            <EditText
                android:id="@+id/et2"
                android:singleLine="true"
                android:background="@null"
                android:fontFamily="@font/font1"
                android:textStyle="bold"
                android:textSize="@dimen/txt_size_lg"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/sizesm1"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:hint="@string/new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/txt2"
            android:layout_marginTop="@dimen/margin1"
            android:paddingLeft="@dimen/margin1"
            android:paddingRight="@dimen/margin"
            android:background="@drawable/round_ract0"
            android:layout_height="@dimen/size62">

            <EditText
                android:id="@+id/et3"
                android:singleLine="true"
                android:background="@null"
                android:fontFamily="@font/font1"
                android:textStyle="bold"
                android:textSize="@dimen/txt_size_lg"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/sizesm1"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:hint="@string/re_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <Button
            android:id="@+id/bt1"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_lg"
            android:background="@drawable/bt_bg"
            android:fontFamily="@font/font2"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textAllCaps="false"
            android:onClick="LoginNow"
            android:textSize="@dimen/txt_size_lg"
            android:text="@string/submit"
            android:backgroundTint="@color/app_color"
            android:layout_height="@dimen/size62"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>