<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:outlineAmbientShadowColor="@color/app_color"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_lg">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin1">


        <ImageView
            android:id="@+id/right_icon"
            android:layout_width="@dimen/size5"
            android:layout_height="@dimen/size5"
            android:layout_alignParentRight="true"
            android:background="@drawable/circle_shape"
            android:backgroundTint="@color/app_color"
            android:padding="@dimen/margin"
            android:src="@drawable/right_arrow"
            android:tint="@color/white" />

        <RelativeLayout
            android:id="@+id/rty1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_toLeftOf="@id/right_icon"
            android:paddingLeft="@dimen/margin">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_mid"
                android:textAllCaps="true"
                android:includeFontPadding="false"
                android:text="@string/select_cat"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_md1" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rty1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin"
            android:paddingTop="@dimen/margin_xlg"
            android:paddingRight="@dimen/margin">

            <RelativeLayout
                android:id="@+id/category_rl"
                android:layout_width="match_parent"

                android:layout_height="@dimen/size6"
                android:background="@drawable/round_ract4"
                android:backgroundTint="@color/lgry"
                android:paddingLeft="@dimen/margin1"
                android:paddingRight="@dimen/margin">


                <TextView
                    android:id="@+id/category_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin"
                    android:background="@null"
                    android:hint="@string/choose_cat"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/dgry"
                    android:textColorHint="@color/dgry"
                    android:textSize="@dimen/txt_size_md" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size6"
                android:layout_marginTop="@dimen/margin_md"
                android:background="@drawable/round_ract4"
                android:backgroundTint="@color/lgry"
                android:paddingLeft="@dimen/margin1"
                android:paddingRight="@dimen/margin">

                <EditText
                    android:id="@+id/price_est"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin"
                    android:background="@null"
                    android:hint="@string/price_est"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/dgry"
                    android:textColorHint="@color/dgry"
                    android:textSize="@dimen/txt_size_md" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_lg"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_mid"
                    android:includeFontPadding="false"
                    android:text="@string/comfort_level"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_md1" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/txt2"
                    android:layout_marginTop="@dimen/margin_md"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_height="@dimen/size5">
                    <TextView
                        android:id="@+id/chk1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font2"
                        android:includeFontPadding="false"
                        android:text="@string/start"
                        android:layout_marginRight="@dimen/margin"
                        android:gravity="center"
                        android:tag="0"
                        android:background="@drawable/round_ract3"
                        android:backgroundTint="@color/lgry"
                        android:textColor="@color/dgry1"
                        android:textSize="@dimen/txt_size_md1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/chk2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font2"
                        android:includeFontPadding="false"
                        android:text="@string/economy"
                        android:layout_marginRight="@dimen/margin"
                        android:gravity="center"
                        android:tag="0"
                        android:background="@drawable/round_ract3"
                        android:backgroundTint="@color/lgry"
                        android:textColor="@color/dgry1"
                        android:textSize="@dimen/txt_size_md1"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/chk3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font2"
                        android:includeFontPadding="false"
                        android:text="@string/comfort"
                        android:layout_marginRight="@dimen/margin"
                        android:gravity="center"
                        android:tag="0"
                        android:background="@drawable/round_ract3"
                        android:backgroundTint="@color/lgry"
                        android:textColor="@color/dgry1"
                        android:textSize="@dimen/txt_size_md1"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>